[package]
name = "wolfssl"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = [ "pkey",  "msg-callback", "error-library", ]

full = ["rsa","num-tickets", "use-session-ticket"]

# Enable support for wolfSSL 430
wolfssl430  = []

pkey = []
rsa = []
msg-callback = []
num-tickets = []
error-library = []
use-session-ticket = []

# Enable internal inspection of wolfSSL.  Needs a patched wolfssl-sys.
internal-header = []

[dependencies]
wolfssl-sys = { path = "./wolfssl-sys"}

libc = { version = "0.2.126" }
foreign-types = { version = "0.5.0" }
bitflags = { version = "1.3.2" }

log = "0.4.17"

[dev-dependencies]

[build-dependencies]


[workspace]

members = [
"wolfssl-sys"
]
